Add location_updated_at for user model
